--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000007;
-	background-color: #AF735F;
+	color: #00000E;
+	background-color: #3A664C;
 }
 
 .html
@@ -12,16 +12,37 @@
 #page
 {
 	z-index: 1;
-	width: 704px;
-	min-height: 2101px;
+	width: 960px;
+	min-height: 3237.95px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-right: 256px;
-	padding-bottom: 273px;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#page_position_content
+{
+	padding-bottom: 62px;
+	width: 0.01px;
+}
+
+#u124
+{
+	z-index: 41;
+	height: 111px;
+	background-color: #000000;
+}
+
+#u124-bw
+{
+	z-index: 41;
+	position: fixed;
+	left: 0px;
+	right: 0px;
+	top: -36px;
 }
 
 #home
@@ -29,52 +50,338 @@
 	position: relative;
 }
 
-#u82-5
+#u149
 {
-	z-index: 14;
-	width: 248px;
-	min-height: 120px;
+	z-index: 46;
+	width: 48px;
 	background-color: transparent;
-	margin-left: 22px;
-	margin-top: 2px;
-	position: relative;
+	position: fixed;
+	top: 20px;
+	left: 20px;
 }
 
-#two
+#u132-4
 {
-	margin-left: 20px;
-	margin-top: 702px;
+	z-index: 42;
+	width: 274px;
+	min-height: 25px;
+	background-color: transparent;
+	color: #FFFFFF;
+	line-height: 37px;
+	font-size: 31px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 500;
+	position: fixed;
+	top: 21px;
+	left: 79px;
+}
+
+#u158-4
+{
+	z-index: 52;
+	width: 121px;
+	min-height: 16px;
+	background-color: transparent;
+	color: #FFFFFF;
+	line-height: 23px;
+	text-align: center;
+	font-size: 19px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	position: fixed;
+	top: 28px;
+	left: 480px;
+}
+
+#u159-4
+{
+	z-index: 56;
+	width: 109px;
+	min-height: 16px;
+	background-color: transparent;
+	color: #FFFFFF;
+	line-height: 23px;
+	text-align: center;
+	font-size: 19px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	position: fixed;
+	top: 28px;
+	left: 638px;
+}
+
+#u160-4
+{
+	z-index: 60;
+	width: 109px;
+	min-height: 16px;
+	background-color: transparent;
+	color: #FFFFFF;
+	line-height: 23px;
+	text-align: center;
+	font-size: 19px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	position: fixed;
+	top: 28px;
+	left: 783px;
+}
+
+#u156-4
+{
+	z-index: 48;
+	width: 112px;
+	min-height: 27px;
+	background-color: transparent;
+	color: #FFFFFF;
+	line-height: 12px;
+	text-align: left;
+	font-size: 10px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	position: fixed;
+	top: 58px;
+	left: 79px;
+}
+
+#u161
+{
+	z-index: 64;
+	width: 43px;
+	height: 2px;
+	background-color: #FFFFFF;
+	position: fixed;
+	top: 60px;
+	left: 519px;
+}
+
+#u162
+{
+	z-index: 65;
+	width: 43px;
+	height: 2px;
+	background-color: #FFFFFF;
+	position: fixed;
+	top: 61px;
+	left: 671px;
+}
+
+#u163
+{
+	z-index: 66;
+	width: 43px;
+	height: 2px;
+	background-color: #FFFFFF;
+	position: fixed;
+	top: 60px;
+	left: 816px;
+}
+
+#u114
+{
+	z-index: 68;
+	width: 50px;
+	min-height: 25px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	left: -179px;
+	margin-top: 67px;
 	position: relative;
 }
 
 #u75
 {
-	z-index: 20;
+	z-index: 67;
 	width: 60px;
 	min-height: 64px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-left: 52px;
-	margin-top: 20px;
+	left: -184px;
+	margin-top: 49px;
 	position: relative;
 }
 
-#u81-5
+#u82-4
 {
-	z-index: 8;
-	width: 440px;
-	min-height: 176px;
+	z-index: 26;
+	width: 248px;
+	min-height: 41px;
 	background-color: transparent;
-	margin-left: 204px;
-	margin-top: 318px;
+	line-height: 48px;
+	text-align: center;
+	font-size: 40px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 500;
+	margin-left: 356px;
+	margin-top: 40px;
 	position: relative;
 }
 
-#two2
+#u170
+{
+	z-index: 34;
+	width: 170px;
+	height: 1px;
+	background-color: #7F7F7F;
+	margin-left: 395px;
+	top: -1px;
+	margin-bottom: -1px;
+	position: relative;
+}
+
+#u168-4
+{
+	z-index: 30;
+	width: 351px;
+	min-height: 63px;
+	background-color: transparent;
+	line-height: 24px;
+	text-align: center;
+	font-size: 20px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 500;
+	margin-left: 305px;
+	margin-top: 8px;
+	position: relative;
+}
+
+#u171-4
+{
+	z-index: 35;
+	width: 226px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 24px;
+	text-align: center;
+	font-size: 20px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	margin-left: 367px;
+	margin-top: 188px;
+	position: relative;
+}
+
+#u172
+{
+	z-index: 39;
+	width: 39px;
+	background-color: transparent;
+	margin-left: 461px;
+	position: relative;
+}
+
+#one
 {
 	margin-left: 20px;
-	margin-top: 282px;
+	margin-top: 79px;
+	position: relative;
+}
+
+#u81-4
+{
+	z-index: 11;
+	width: 440px;
+	min-height: 32px;
+	background-color: transparent;
+	line-height: 36px;
+	font-size: 30px;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 500;
+	margin-left: 42px;
+	margin-top: 109px;
+	position: relative;
+}
+
+#pu178
+{
+	width: 0.01px;
+	margin-left: 42px;
+	margin-top: 20px;
+}
+
+#u178
+{
+	z-index: 20;
+	width: 120px;
+	background-color: transparent;
+	border-radius: 100px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u178 .clip_frame
+{
+	-webkit-border-radius: 100px 100px 100px 100px;
+}
+
+#u167-4
+{
+	z-index: 16;
+	width: 273px;
+	min-height: 89px;
+	background-color: transparent;
+	text-align: left;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	position: relative;
+	margin-right: -10000px;
+	left: 142px;
+}
+
+#u184-4
+{
+	z-index: 22;
+	width: 105px;
+	min-height: 22px;
+	background-color: transparent;
+	text-align: center;
+	font-family: brandon-grotesque, sans-serif;
+	font-weight: 300;
+	margin-left: 244px;
+	margin-top: 101px;
+	position: relative;
+}
+
+#pu166
+{
+	width: 0.01px;
+	margin-left: 71px;
+}
+
+#u166
+{
+	z-index: 15;
+	width: 449px;
+	height: 323px;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #000000;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: -1px;
+}
+
+#u185
+{
+	z-index: 69;
+	width: 250px;
+	min-height: 336px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 509px;
+}
+
+#two
+{
+	margin-left: 30px;
+	margin-top: 415px;
 	position: relative;
 }
 
@@ -84,8 +391,30 @@
 	width: 560px;
 	min-height: 168px;
 	background-color: transparent;
+	font-size: 30px;
+	line-height: 36px;
 	margin-left: 144px;
-	margin-top: 195px;
+	margin-top: 253px;
+	position: relative;
+}
+
+#three
+{
+	margin-left: 9px;
+	margin-top: 444px;
+	position: relative;
+}
+
+#u165-4
+{
+	z-index: 7;
+	width: 560px;
+	min-height: 168px;
+	background-color: transparent;
+	font-size: 30px;
+	line-height: 36px;
+	margin-left: 144px;
+	margin-top: 154px;
 	position: relative;
 }
 
