--- a/LiveSite/css/site_global.css
+++ b/LiveSite/css/site_global.css
@@ -1,3 +1,29 @@
+a:visited
+{
+	text-decoration: none;
+	color: inherit;
+}
+
+a:hover
+{
+	text-decoration: none;
+	color: inherit;
+}
+
+a:active
+{
+	text-decoration: none;
+	color: inherit;
+}
+
+a.nontext /* used to override default properties of 'a' tag */
+{
+	color: black;
+	text-decoration: none;
+	font-style: normal;
+	font-weight: normal;
+}
+
 html
 {
 	min-height: 100%;
@@ -85,36 +111,10 @@ body
 	body { text-rendering:auto; }
 }
 
-a:link
+a
 {
-	color: #0000FF;
-	text-decoration: underline;
-}
-
-a:visited
-{
-	color: #800080;
-	text-decoration: underline;
-}
-
-a:hover
-{
-	color: #0000FF;
-	text-decoration: underline;
-}
-
-a:active
-{
-	color: #EE0000;
-	text-decoration: underline;
-}
-
-a.nontext /* used to override default properties of 'a' tag */
-{
-	color: black;
-	text-decoration: none;
-	font-style: normal;
-	font-weight: normal;
+	color: inherit;
+	text-decoration: inherit;
 }
 
 .normal_text
