Updated to transition to another machine

--- a/LiveSite/css/iefonts_index.css
+++ b/LiveSite/css/iefonts_index.css
@@ -3,12 +3,12 @@
 	font-family: asap-n4, sans-serif;
 }
 
-#u419-4,#u167-4,#u220-4,#u221-4,#u243-4
+#u419-4,#u220-4,#u221-4,#u243-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u132-4,#u82-4,#u407-4,#u410-4,#u81-4,#u328-4,#u625-4
+#u132-4,#u82-4,#u81-4,#u407-4,#u410-4,#u328-4,#u625-4
 {
 	font-family: asap-n7, sans-serif;
 }
