--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000EE;
-	background-color: #B66D52;
+	color: #0000FD;
+	background-color: #83B01D;
 }
 
 .html
@@ -309,7 +309,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 599px;
+	left: 604px;
 }
 
 #u171-4
