added loading indicators to scenarios 2 and 3

--- a/LiveSite/css/iefonts_index.css
+++ b/LiveSite/css/iefonts_index.css
@@ -13,7 +13,7 @@
 	font-family: asap-n7, sans-serif;
 }
 
-#u321-6,#u339-4,#u366-4,#u656-4,#u362-4
+#u321-6,#u339-4,#u366-4,#u656-4,#u355-4,#u362-4
 {
 	font-family: asap-n4, sans-serif;
 }
@@ -28,7 +28,7 @@
 	font-family: asap-n7, sans-serif;
 }
 
-#u355-4,#u518-6,#u532-4,#u431-4,#u663-4,#u663,#u426-4,#u664-4,#u664,#u427-4,#u666-4,#u428-4,#u667-4,#u618-4
+#u518-6,#u532-4,#u431-4,#u663-4,#u663,#u426-4,#u664-4,#u664,#u427-4,#u666-4,#u428-4,#u667-4,#u618-4
 {
 	font-family: asap-n4, sans-serif;
 }
