--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000EB;
-	background-color: #693547;
+	color: #0000E7;
+	background-color: #F9AF00;
 }
 
 .html
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 4019px;
+	min-height: 3928px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -24,7 +24,7 @@
 
 #page_position_content
 {
-	padding-bottom: 276px;
+	padding-bottom: 185px;
 	width: 0.01px;
 }
 
@@ -1227,24 +1227,11 @@
 	background-size: 202px 2px;
 }
 
-#pu962
+#ppu366-4
 {
 	width: 0.01px;
-	margin-left: 20px;
+	margin-left: 132px;
 	margin-top: 5px;
-}
-
-#u962
-{
-	z-index: 3;
-	width: 101px;
-	min-height: 100px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 165px;
 }
 
 #pu366-4
@@ -1252,7 +1239,6 @@
 	width: 0.01px;
 	padding-bottom: 1px;
 	margin-right: -10000px;
-	margin-left: 112px;
 }
 
 #u366-4
@@ -1302,6 +1288,54 @@
 	margin-top: 19px;
 }
 
+#pu962
+{
+	width: 0.01px;
+	margin-left: 1px;
+	margin-top: 11px;
+}
+
+#u962
+{
+	z-index: 3;
+	width: 101px;
+	min-height: 100px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 15px;
+	left: 98px;
+}
+
+#u369
+{
+	z-index: 113;
+	width: 504px;
+	min-height: 81px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 56px;
+}
+
+#u355-4
+{
+	z-index: 119;
+	width: 105px;
+	min-height: 22px;
+	background-color: transparent;
+	text-align: left;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 38px;
+}
+
 #buttonu359
 {
 	z-index: 125;
@@ -1311,9 +1345,8 @@
 	border-color: #000000;
 	background-color: #FFFFFF;
 	border-radius: 100px;
-	margin-left: 1px;
-	margin-top: 11px;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #buttonu359:hover
@@ -1321,15 +1354,7 @@
 	background-color: #CACACA;
 	width: 67px;
 	min-height: 0px;
-	margin: 11px 0px 0px 1px;
-}
-
-#buttonu359.ButtonSelected
-{
-	background-color: #FFFFFF;
-	width: 67px;
-	min-height: 0px;
-	margin: 11px 0px 0px 1px;
+	margin: 0px -10000px 0px 0px;
 }
 
 #u362-4
@@ -1386,34 +1411,6 @@
 #u203_img,#u360_img
 {
 	padding-bottom: 2px;
-}
-
-#u355-4
-{
-	z-index: 119;
-	width: 105px;
-	min-height: 22px;
-	background-color: transparent;
-	text-align: left;
-	font-family: asap, sans-serif;
-	font-weight: 400;
-	margin-left: 1px;
-	margin-top: 8px;
-	position: relative;
-}
-
-#u369
-{
-	z-index: 113;
-	width: 504px;
-	min-height: 81px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 1px;
-	top: -4px;
-	margin-bottom: -4px;
-	position: relative;
 }
 
 #pamphletu498
@@ -1926,7 +1923,7 @@
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 10px;
-	left: 670px;
+	left: 558px;
 }
 
 #three
@@ -2068,24 +2065,11 @@
 	font-weight: 400;
 }
 
-#pu964
+#ppu427-4
 {
 	width: 0.01px;
-	margin-left: 20px;
+	margin-left: 129px;
 	margin-top: -4px;
-}
-
-#u964
-{
-	z-index: 4;
-	width: 101px;
-	min-height: 100px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 215px;
 }
 
 #pu427-4
@@ -2094,7 +2078,6 @@
 	padding-bottom: 0px;
 	margin-right: -10000px;
 	margin-top: 17px;
-	margin-left: 109px;
 }
 
 #u427-4
@@ -2187,6 +2170,26 @@
 	left: 425px;
 }
 
+#pu964
+{
+	width: 0.01px;
+	margin-top: 18px;
+}
+
+#u964
+{
+	z-index: 4;
+	width: 101px;
+	min-height: 100px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 15px;
+	left: 98px;
+}
+
 #buttonu615
 {
 	z-index: 30;
@@ -2196,8 +2199,8 @@
 	border-color: #000000;
 	background-color: #FFFFFF;
 	border-radius: 100px;
-	margin-top: 18px;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #buttonu615:hover
@@ -2205,15 +2208,15 @@
 	background-color: #CACACA;
 	width: 67px;
 	min-height: 0px;
-	margin: 18px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 }
 
-#buttonu615.ButtonSelected
+#buttonu359.ButtonSelected,#buttonu615.ButtonSelected
 {
 	background-color: #FFFFFF;
 	width: 67px;
 	min-height: 0px;
-	margin: 18px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 }
 
 #u618-4
@@ -2281,19 +2284,6 @@
 	padding-bottom: 1px;
 }
 
-#u621-4
-{
-	z-index: 139;
-	width: 105px;
-	min-height: 22px;
-	background-color: transparent;
-	text-align: left;
-	font-family: asap, sans-serif;
-	font-weight: 400;
-	margin-top: 15px;
-	position: relative;
-}
-
 #u432
 {
 	z-index: 67;
@@ -2303,6 +2293,22 @@
 	border-color: transparent;
 	background-color: transparent;
 	position: relative;
+	margin-right: -10000px;
+	margin-top: 63px;
+}
+
+#u621-4
+{
+	z-index: 139;
+	width: 105px;
+	min-height: 22px;
+	background-color: transparent;
+	text-align: left;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 41px;
 }
 
 #pamphletu553
@@ -2311,7 +2317,7 @@
 	width: 0.01px;
 	height: 56px;
 	margin-left: 28px;
-	margin-top: 12px;
+	margin-top: 13px;
 	position: relative;
 }
 
@@ -2849,7 +2855,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 670px;
+	left: 561px;
 }
 
 #accordionu833
@@ -2939,7 +2945,7 @@
 	border-style: solid;
 	border-color: #FFFFFF;
 	background-color: #FFFFFF;
-	padding: 23px 99px 84px 41px;
+	padding: 23px 99px 14px 41px;
 }
 
 #pu956
@@ -3150,8 +3156,7 @@
 {
 	width: 0.01px;
 	margin-left: 667px;
-	top: -8px;
-	margin-bottom: -8px;
+	margin-top: 5px;
 	position: relative;
 }
 
